Добавление бинарного дерева

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -27,6 +27,19 @@
      <string>LinkedList test</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="binary_tree_test_button">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>400</y>
+      <width>221</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>BinaryTree test</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
