--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,7 +17,7 @@
    <widget class="QPushButton" name="linked_list_test_button">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>290</x>
       <y>400</y>
       <width>221</width>
       <height>71</height>
@@ -30,8 +30,8 @@
    <widget class="QPushButton" name="binary_tree_test_button">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>400</y>
+      <x>40</x>
+      <y>390</y>
       <width>221</width>
       <height>71</height>
      </rect>
@@ -43,8 +43,8 @@
    <widget class="QPushButton" name="stack_test_button">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>310</y>
+      <x>530</x>
+      <y>400</y>
       <width>221</width>
       <height>71</height>
      </rect>
@@ -90,6 +90,32 @@
     </property>
     <property name="text">
      <string>Quick sort test</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="linear_search_test_button">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>230</y>
+      <width>221</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Linear search test</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="binary_search_test_button">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>230</y>
+      <width>221</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Binary search test</string>
     </property>
    </widget>
   </widget>
